fix mobile list of brainstormings behind the hamburger icon (#55)

--- a/assets/css/_bootstrap_custom.scss
+++ b/assets/css/_bootstrap_custom.scss
@@ -11,7 +11,3 @@
   padding: 0.5rem 0.5rem;
   background-color: inherit;
 }
-
-.navbar {
-  padding: 0;
-}
